2011-05-19 Fred Kiefer <FredKiefer@gmx.de>

	* MyGL/AppController.m: Protect the name id.
	Patch by Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

2010-07-25  Eric Wasylishen <ewasylishen@gmail.com>

	* MyGL/main.m: Use NSApplicationMain() as the current method wasn't
	loading the main nib

2010-06-02 Adam Fedor <fedor@gnu.org>

	* Fix a few compiler warnings

2010-04-14  Eric Wasylishen <ewasylishen@gmail.com>

	* MyGL/AppController.h:
	* MyGL/AppController.m: Modify MyGL to have several NSOpenGLView's
	displayed in NSSplitView's.

2010-03-07  Nicola  <nicola.pero@meta-innovation.com>

	* GNUmakefile (SUBPROJECTS): Do not compile MyGL by default as not
	everyone has OpenGL.

2009-05-20  Fred Kiefer <FredKiefer@gmx.de>

	* ExampleTheme: New directory with one example theme
	by Fred Morcos <fred.morcos@gmail.com>

2009-01-07  Fred Kiefer <FredKiefer@gmx.de>

	* ToolbarExample/SecondWindowOwner.m (-awakeFromNib): Adopt to
	changes in NSToolbar. Now the toolbar retains the view.

2009-01-01  Fred Kiefer <FredKiefer@gmx.de>

	* GSTest/NSAnimation-test/AnimationView.m: Correct line endings.
	* ToolbarExample: Adopt to changes in NSToolbar and the removal of
	GSToolbar.

2007-05-24 Adam Fedor <fedor@gnu.org>

	* Add MyGL, by Banlu Kemiyatorn

2007-04-12 Xavier Glattard <xavier.glattard@online.fr>

    * GSTest/NSAnimation-test : Follow changes in NSAnimation class, run threaded
    * GSTest/NSViewAnimation-test : run threaded

2007-04-05 Xavier Glattard <xavier.glattard@online.fr>

    * GSTest/NSAnimation-test : New test
    * GSTest/NSViewAnimation-test : New test

2006-09-08 Adam Fedor <fedor@gnu.org>

	* Remove GPuzzle - more up-to-date at Marko's site.

2005-01-13 17:38  Alexander Malmberg  <alexander@malmberg.org>

        * GNUmakefile (SUBPROJECTS): Add ExampleService. Partially fixes
	bug #8161.

2004-11-11  Adam Fedor  <fedor@gnu.org>

	* Classes/NSImage/nsimage.m: Create menu before starting loop
	(patch from Patrick Middleton, Patch #3500).
