@@ -24,7 +24,8 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 # The applications to be compiled
 TEST_APP_NAME = nscombobox nstabview nsimagecell popupbuttons testpb \
-	nsprogressindicator matrix nsscroller
+	nsprogressindicator matrix nsscroller nscursor buttons windows \
+	fontpanel menu
 
 nscombobox_OBJC_FILES = nscombobox.m
 nstabview_OBJC_FILES = nstabview.m GSImageTabViewItem.m TestView.m
@@ -35,6 +36,10 @@ testpb_OBJC_FILES = testpb.m
 nsprogressindicator_OBJC_FILES = nsprogressindicator.m
 matrix_OBJC_FILES = matrix.m
 nsscroller_OBJC_FILES = nsscroller.m
+nscursor_OBJC_FILES = nscursor.m ColorView.m
+buttons_OBJC_FILES = buttons.m
+windows_OBJC_FILES = windows.m TestView.m
+fontpanel_OBJC_FILES = fontpanel.m
+menu_OBJC_FILES = menu.m
 
 include $(GNUSTEP_MAKEFILES)/test-application.make
-
